Overflow fix

--- a/rolleshark.scss
+++ b/rolleshark.scss
@@ -19,7 +19,7 @@
 
 body, html {
 
-    overflow: hidden !important;
+    overflow-y: hidden !important;
 
     .detailSelected {
         line-height: auto !important;
